// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sign getSigningBytes should return transaction bytes for given params 1`] = `
Object {
  "data": Array [
    10,
    5,
    116,
    111,
    107,
    101,
    110,
    18,
    8,
    116,
    114,
    97,
    110,
    115,
    102,
    101,
    114,
    24,
    1,
    32,
    128,
    173,
    226,
    4,
    42,
    32,
    241,
    185,
    244,
    238,
    113,
    181,
    213,
    133,
    125,
    59,
    52,
    109,
    68,
    28,
    169,
    103,
    242,
    120,
    112,
    235,
    238,
    136,
    86,
    157,
    179,
    100,
    253,
    19,
    226,
    138,
    219,
    163,
    50,
    33,
    8,
    128,
    250,
    191,
    166,
    178,
    182,
    143,
    7,
    18,
    20,
    58,
    151,
    31,
    208,
    43,
    74,
    7,
    252,
    32,
    170,
    209,
    147,
    109,
    60,
    177,
    210,
    99,
    185,
    110,
    15,
    26,
    0,
  ],
  "type": "Buffer",
}
`;

exports[`sign signTransactionWithPrivateKey should return signed transaction for given params schema 1`] = `
Object {
  "command": "transfer",
  "fee": 10000000n,
  "id": Object {
    "data": Array [
      150,
      136,
      147,
      167,
      14,
      137,
      133,
      191,
      169,
      10,
      185,
      110,
      197,
      203,
      214,
      182,
      132,
      69,
      144,
      165,
      167,
      77,
      201,
      63,
      168,
      106,
      42,
      170,
      211,
      181,
      199,
      54,
    ],
    "type": "Buffer",
  },
  "module": "token",
  "nonce": 1n,
  "params": Object {
    "amount": 4008489300000000n,
    "data": "",
    "recipientAddress": Object {
      "data": Array [
        58,
        151,
        31,
        208,
        43,
        74,
        7,
        252,
        32,
        170,
        209,
        147,
        109,
        60,
        177,
        210,
        99,
        185,
        110,
        15,
      ],
      "type": "Buffer",
    },
  },
  "senderPublicKey": Object {
    "data": Array [
      241,
      185,
      244,
      238,
      113,
      181,
      213,
      133,
      125,
      59,
      52,
      109,
      68,
      28,
      169,
      103,
      242,
      120,
      112,
      235,
      238,
      136,
      86,
      157,
      179,
      100,
      253,
      19,
      226,
      138,
      219,
      163,
    ],
    "type": "Buffer",
  },
  "signatures": Array [
    Object {
      "data": Array [
        207,
        181,
        40,
        223,
        75,
        81,
        207,
        96,
        93,
        40,
        71,
        68,
        135,
        66,
        193,
        7,
        32,
        90,
        215,
        84,
        93,
        77,
        224,
        210,
        6,
        119,
        28,
        106,
        41,
        58,
        59,
        50,
        232,
        239,
        34,
        187,
        69,
        102,
        87,
        213,
        45,
        104,
        72,
        91,
        216,
        179,
        101,
        131,
        173,
        63,
        80,
        51,
        112,
        205,
        89,
        72,
        59,
        236,
        176,
        196,
        11,
        86,
        38,
        9,
      ],
      "type": "Buffer",
    },
  ],
}
`;

exports[`sign when running scenario "multisignature_registration_transaction" Both mandatory and optional member group should have correct signatures 1`] = `
Object {
  "command": "registerMultisignatureGroup",
  "fee": 1500000000n,
  "module": "auth",
  "nonce": 1n,
  "params": Object {
    "mandatoryKeys": Array [
      Object {
        "data": Array [
          74,
          103,
          100,
          106,
          68,
          99,
          19,
          219,
          150,
          76,
          57,
          55,
          3,
          89,
          132,
          92,
          82,
          252,
          233,
          34,
          90,
          57,
          41,
          119,
          14,
          244,
          20,
          72,
          194,
          88,
          253,
          57,
        ],
        "type": "Buffer",
      },
      Object {
        "data": Array [
          241,
          185,
          244,
          238,
          113,
          181,
          213,
          133,
          125,
          59,
          52,
          109,
          68,
          28,
          169,
          103,
          242,
          120,
          112,
          235,
          238,
          136,
          86,
          157,
          179,
          100,
          253,
          19,
          226,
          138,
          219,
          163,
        ],
        "type": "Buffer",
      },
    ],
    "numberOfSignatures": 4,
    "optionalKeys": Array [
      Object {
        "data": Array [
          87,
          223,
          92,
          56,
          17,
          150,
          25,
          57,
          248,
          220,
          250,
          133,
          140,
          110,
          174,
          254,
          191,
          170,
          77,
          233,
          66,
          247,
          231,
          3,
          191,
          136,
          18,
          126,
          14,
          233,
          204,
          164,
        ],
        "type": "Buffer",
      },
      Object {
        "data": Array [
          250,
          64,
          107,
          105,
          82,
          211,
          119,
          240,
          39,
          137,
          32,
          227,
          235,
          141,
          169,
          25,
          228,
          207,
          92,
          104,
          176,
          46,
          235,
          165,
          216,
          179,
          51,
          79,
          220,
          3,
          105,
          182,
        ],
        "type": "Buffer",
      },
    ],
    "signatures": Array [
      Object {
        "data": Array [
          57,
          59,
          45,
          222,
          105,
          222,
          184,
          148,
          4,
          142,
          130,
          116,
          88,
          206,
          27,
          71,
          4,
          152,
          35,
          182,
          129,
          153,
          241,
          90,
          129,
          107,
          208,
          70,
          185,
          27,
          86,
          211,
          175,
          33,
          15,
          142,
          126,
          35,
          17,
          217,
          252,
          138,
          79,
          161,
          173,
          177,
          117,
          205,
          47,
          201,
          8,
          43,
          54,
          239,
          103,
          7,
          4,
          254,
          62,
          124,
          195,
          139,
          28,
          10,
        ],
        "type": "Buffer",
      },
      Object {
        "data": Array [
          125,
          14,
          6,
          250,
          189,
          240,
          132,
          180,
          25,
          146,
          53,
          242,
          141,
          234,
          1,
          66,
          82,
          147,
          171,
          119,
          134,
          185,
          229,
          219,
          228,
          22,
          247,
          197,
          161,
          209,
          243,
          55,
          253,
          195,
          96,
          137,
          23,
          94,
          110,
          164,
          106,
          138,
          100,
          146,
          0,
          199,
          117,
          180,
          20,
          163,
          39,
          64,
          165,
          156,
          175,
          188,
          108,
          108,
          175,
          175,
          44,
          93,
          246,
          9,
        ],
        "type": "Buffer",
      },
      Object {
        "data": Array [
          246,
          40,
          147,
          69,
          121,
          168,
          224,
          191,
          181,
          254,
          35,
          27,
          95,
          142,
          70,
          27,
          167,
          14,
          78,
          87,
          246,
          40,
          101,
          200,
          92,
          77,
          64,
          84,
          39,
          218,
          23,
          216,
          177,
          205,
          92,
          253,
          115,
          104,
          56,
          249,
          62,
          230,
          130,
          187,
          100,
          18,
          87,
          230,
          53,
          180,
          68,
          205,
          173,
          16,
          36,
          124,
          83,
          72,
          132,
          237,
          216,
          216,
          177,
          3,
        ],
        "type": "Buffer",
      },
      Object {
        "data": Array [
          195,
          218,
          19,
          119,
          142,
          220,
          232,
          231,
          143,
          150,
          130,
          228,
          241,
          177,
          188,
          24,
          110,
          238,
          93,
          238,
          140,
          232,
          110,
          96,
          141,
          8,
          211,
          196,
          221,
          100,
          63,
          112,
          57,
          202,
          3,
          218,
          131,
          57,
          145,
          94,
          126,
          79,
          244,
          244,
          113,
          86,
          2,
          107,
          243,
          82,
          182,
          233,
          166,
          110,
          219,
          4,
          83,
          81,
          33,
          9,
          10,
          102,
          16,
          15,
        ],
        "type": "Buffer",
      },
    ],
  },
  "senderPublicKey": Object {
    "data": Array [
      11,
      33,
      31,
      206,
      75,
      97,
      80,
      131,
      112,
      28,
      184,
      168,
      201,
      148,
      7,
      228,
      100,
      178,
      249,
      170,
      79,
      54,
      112,
      149,
      50,
      45,
      225,
      183,
      126,
      95,
      207,
      190,
    ],
    "type": "Buffer",
  },
  "signatures": Array [
    Object {
      "data": Array [
        183,
        228,
        132,
        189,
        50,
        84,
        80,
        140,
        248,
        20,
        93,
        87,
        40,
        129,
        20,
        198,
        68,
        50,
        133,
        35,
        203,
        112,
        32,
        168,
        141,
        19,
        109,
        171,
        160,
        39,
        108,
        142,
        215,
        204,
        38,
        7,
        87,
        134,
        75,
        201,
        249,
        70,
        20,
        210,
        147,
        129,
        172,
        3,
        117,
        230,
        212,
        170,
        103,
        217,
        107,
        244,
        98,
        11,
        254,
        213,
        237,
        196,
        20,
        7,
      ],
      "type": "Buffer",
    },
    Object {
      "data": Array [
        55,
        178,
        99,
        49,
        164,
        46,
        178,
        86,
        139,
        183,
        41,
        106,
        147,
        145,
        112,
        246,
        182,
        143,
        220,
        39,
        228,
        20,
        163,
        129,
        145,
        186,
        112,
        196,
        234,
        103,
        22,
        52,
        66,
        75,
        65,
        241,
        125,
        29,
        2,
        112,
        229,
        197,
        190,
        29,
        234,
        142,
        222,
        1,
        6,
        24,
        20,
        152,
        212,
        250,
        181,
        102,
        146,
        166,
        18,
        84,
        92,
        111,
        65,
        13,
      ],
      "type": "Buffer",
    },
    Object {
      "data": Array [
        169,
        249,
        38,
        190,
        14,
        57,
        83,
        37,
        244,
        21,
        30,
        145,
        206,
        181,
        252,
        70,
        133,
        238,
        41,
        160,
        130,
        145,
        251,
        122,
        81,
        59,
        56,
        139,
        204,
        172,
        116,
        164,
        82,
        63,
        248,
        57,
        239,
        19,
        17,
        243,
        223,
        151,
        94,
        79,
        238,
        10,
        65,
        203,
        92,
        31,
        185,
        224,
        255,
        166,
        132,
        126,
        226,
        129,
        23,
        133,
        139,
        69,
        209,
        14,
      ],
      "type": "Buffer",
    },
    Object {
      "data": Array [
        213,
        7,
        55,
        138,
        171,
        81,
        86,
        189,
        114,
        133,
        29,
        23,
        226,
        249,
        130,
        25,
        111,
        30,
        38,
        212,
        166,
        132,
        25,
        170,
        75,
        171,
        176,
        118,
        153,
        237,
        43,
        93,
        58,
        230,
        17,
        170,
        63,
        59,
        91,
        193,
        255,
        44,
        82,
        223,
        115,
        189,
        195,
        115,
        8,
        177,
        252,
        233,
        131,
        187,
        61,
        6,
        198,
        161,
        207,
        196,
        171,
        110,
        6,
        3,
      ],
      "type": "Buffer",
    },
    Object {
      "data": Array [
        88,
        78,
        88,
        189,
        128,
        82,
        86,
        40,
        102,
        45,
        172,
        144,
        139,
        33,
        102,
        142,
        132,
        209,
        166,
        21,
        36,
        84,
        175,
        106,
        183,
        75,
        39,
        244,
        43,
        126,
        9,
        120,
        93,
        64,
        119,
        74,
        97,
        112,
        131,
        70,
        94,
        177,
        237,
        113,
        38,
        56,
        62,
        154,
        153,
        15,
        3,
        121,
        173,
        57,
        144,
        43,
        135,
        72,
        52,
        164,
        151,
        151,
        167,
        12,
      ],
      "type": "Buffer",
    },
  ],
}
`;

exports[`sign when running scenario "multisignature_registration_transaction" Only mandatory members should have correct signatures 1`] = `
Object {
  "command": "registerMultisignatureGroup",
  "fee": 1500000000n,
  "module": "auth",
  "nonce": 1n,
  "params": Object {
    "mandatoryKeys": Array [
      Object {
        "data": Array [
          74,
          103,
          100,
          106,
          68,
          99,
          19,
          219,
          150,
          76,
          57,
          55,
          3,
          89,
          132,
          92,
          82,
          252,
          233,
          34,
          90,
          57,
          41,
          119,
          14,
          244,
          20,
          72,
          194,
          88,
          253,
          57,
        ],
        "type": "Buffer",
      },
      Object {
        "data": Array [
          241,
          185,
          244,
          238,
          113,
          181,
          213,
          133,
          125,
          59,
          52,
          109,
          68,
          28,
          169,
          103,
          242,
          120,
          112,
          235,
          238,
          136,
          86,
          157,
          179,
          100,
          253,
          19,
          226,
          138,
          219,
          163,
        ],
        "type": "Buffer",
      },
    ],
    "numberOfSignatures": 2,
    "optionalKeys": Array [],
    "signatures": Array [
      Object {
        "data": Array [
          161,
          190,
          238,
          34,
          211,
          199,
          7,
          213,
          108,
          244,
          21,
          16,
          18,
          74,
          113,
          232,
          105,
          205,
          226,
          187,
          99,
          240,
          252,
          101,
          45,
          60,
          10,
          251,
          246,
          214,
          46,
          105,
          225,
          243,
          90,
          134,
          38,
          153,
          20,
          129,
          203,
          85,
          43,
          159,
          122,
          139,
          1,
          172,
          174,
          185,
          30,
          12,
          238,
          71,
          174,
          69,
          111,
          115,
          58,
          120,
          19,
          198,
          50,
          11,
        ],
        "type": "Buffer",
      },
      Object {
        "data": Array [
          147,
          106,
          112,
          241,
          36,
          51,
          208,
          227,
          94,
          215,
          51,
          178,
          132,
          45,
          214,
          217,
          221,
          79,
          251,
          176,
          47,
          100,
          67,
          137,
          55,
          72,
          152,
          187,
          94,
          142,
          221,
          104,
          218,
          108,
          250,
          239,
          137,
          17,
          118,
          113,
          186,
          167,
          190,
          163,
          135,
          32,
          133,
          94,
          200,
          20,
          110,
          189,
          7,
          124,
          255,
          92,
          210,
          183,
          159,
          199,
          39,
          235,
          42,
          5,
        ],
        "type": "Buffer",
      },
    ],
  },
  "senderPublicKey": Object {
    "data": Array [
      11,
      33,
      31,
      206,
      75,
      97,
      80,
      131,
      112,
      28,
      184,
      168,
      201,
      148,
      7,
      228,
      100,
      178,
      249,
      170,
      79,
      54,
      112,
      149,
      50,
      45,
      225,
      183,
      126,
      95,
      207,
      190,
    ],
    "type": "Buffer",
  },
  "signatures": Array [
<<<<<<< HEAD
    Object {
      "data": Array [
        237,
        125,
        37,
        56,
        224,
        69,
        190,
        146,
        246,
        107,
        108,
        200,
        91,
        87,
        184,
        73,
        12,
        176,
        70,
        178,
        156,
        101,
        216,
        131,
        107,
        125,
        237,
        191,
        71,
        27,
        242,
        218,
        67,
        241,
        127,
        252,
        180,
        211,
        32,
        96,
        133,
        137,
        237,
        33,
        28,
        137,
        222,
        125,
        196,
        205,
        22,
        96,
        183,
        95,
        191,
        192,
        22,
        229,
        254,
        186,
        102,
        129,
        203,
        1,
      ],
      "type": "Buffer",
    },
    Object {
      "data": Array [
        220,
        196,
        136,
        22,
        109,
        170,
        50,
        215,
        101,
        62,
        211,
        8,
        147,
        70,
        211,
        196,
        237,
        217,
        141,
        41,
        69,
        111,
        10,
        188,
        21,
        32,
        169,
        101,
        86,
        104,
        172,
        101,
        4,
        84,
        63,
        118,
        106,
        18,
        121,
        4,
        244,
        253,
        100,
        138,
        107,
        241,
        212,
        47,
        12,
        210,
        148,
        47,
        38,
        216,
        4,
        141,
        174,
        150,
        212,
        7,
        101,
        2,
        32,
        13,
      ],
      "type": "Buffer",
    },
    Object {
      "data": Array [
        36,
        10,
        224,
        239,
        233,
        74,
        89,
        239,
        55,
        120,
        28,
        192,
        4,
        84,
        168,
        160,
        14,
        10,
        208,
        52,
        176,
        235,
        158,
        227,
        38,
        187,
        159,
        209,
        114,
        112,
        113,
        239,
        108,
        49,
        137,
        34,
        186,
        212,
        91,
        186,
        247,
        95,
        122,
        15,
        236,
        165,
        59,
        225,
        64,
        106,
        110,
        59,
        56,
        244,
        20,
        239,
        79,
        22,
        145,
        249,
        41,
        17,
        240,
        0,
      ],
      "type": "Buffer",
    },
  ],
}
`;

exports[`sign when running scenario "multisignature_registration_transaction" Only optional members should have correct signatures 1`] = `
Object {
  "command": "registerMultisignatureGroup",
  "fee": 1500000000n,
  "module": "auth",
  "nonce": 1n,
  "params": Object {
    "mandatoryKeys": Array [],
    "numberOfSignatures": 1,
    "optionalKeys": Array [
      Object {
        "data": Array [
          87,
          223,
          92,
          56,
          17,
          150,
          25,
          57,
          248,
          220,
          250,
          133,
          140,
          110,
          174,
          254,
          191,
          170,
          77,
          233,
          66,
          247,
          231,
          3,
          191,
          136,
          18,
          126,
          14,
          233,
          204,
          164,
        ],
        "type": "Buffer",
      },
      Object {
        "data": Array [
          250,
          64,
          107,
          105,
          82,
          211,
          119,
          240,
          39,
          137,
          32,
          227,
          235,
          141,
          169,
          25,
          228,
          207,
          92,
          104,
          176,
          46,
          235,
          165,
          216,
          179,
          51,
          79,
          220,
          3,
          105,
          182,
        ],
        "type": "Buffer",
      },
    ],
    "signatures": Array [
      Object {
        "data": Array [
          115,
          96,
          236,
          100,
          178,
          84,
          240,
          232,
          134,
          30,
          250,
          205,
          1,
          237,
          3,
          100,
          33,
          71,
          172,
          209,
          238,
          253,
          189,
          254,
          174,
          243,
          14,
          90,
          214,
          153,
          207,
          116,
          12,
          52,
          1,
          146,
          49,
          165,
          29,
          10,
          22,
          157,
          50,
          143,
          232,
          164,
          19,
          162,
          52,
          5,
          71,
          255,
          70,
          110,
          24,
          209,
          33,
          175,
          186,
          113,
          20,
          5,
          47,
          1,
        ],
        "type": "Buffer",
      },
      Object {
        "data": Array [
          55,
          80,
          44,
          15,
          106,
          20,
          160,
          157,
          116,
          134,
          81,
          6,
          214,
          215,
          231,
          21,
          61,
          204,
          142,
          151,
          232,
          189,
          43,
          38,
          61,
          132,
          245,
          153,
          62,
          7,
          199,
          112,
          119,
          42,
          114,
          227,
          30,
          60,
          189,
          154,
          81,
          249,
          135,
          91,
          190,
          224,
          2,
          236,
          59,
          222,
          198,
          46,
          53,
          222,
          16,
          54,
          98,
          139,
          117,
          13,
          161,
          121,
          165,
          2,
        ],
        "type": "Buffer",
      },
    ],
  },
  "senderPublicKey": Object {
    "data": Array [
      11,
      33,
      31,
      206,
      75,
      97,
      80,
      131,
      112,
      28,
      184,
      168,
      201,
      148,
      7,
      228,
      100,
      178,
      249,
      170,
      79,
      54,
      112,
      149,
      50,
      45,
      225,
      183,
      126,
      95,
      207,
      190,
    ],
    "type": "Buffer",
  },
  "signatures": Array [
    Object {
      "data": Array [
        171,
        20,
        35,
        72,
        105,
        244,
        73,
        163,
        185,
        205,
        251,
        120,
        112,
        156,
        129,
        162,
        162,
        225,
        179,
        51,
        61,
        105,
        0,
        81,
        250,
        173,
        85,
        85,
        61,
        119,
        34,
        174,
        228,
        122,
        198,
        200,
        214,
        131,
        198,
        131,
        184,
        236,
        9,
        173,
        66,
        189,
        61,
        38,
        145,
        42,
        33,
        46,
        253,
        136,
        240,
        124,
        24,
        114,
        212,
        204,
        127,
        144,
        186,
        12,
      ],
      "type": "Buffer",
    },
    Object {
      "data": Array [
        43,
        14,
        159,
        34,
        187,
        252,
        8,
        91,
        100,
        17,
        201,
        81,
        47,
        64,
        188,
        228,
        66,
        146,
        176,
        102,
        79,
        229,
        163,
        205,
        163,
        198,
        174,
        79,
        39,
        67,
        236,
        17,
        213,
        86,
        118,
        9,
        13,
        225,
        213,
        168,
        198,
        3,
        80,
        146,
        196,
        158,
        64,
        135,
        29,
        184,
        199,
        58,
        92,
        212,
        96,
        214,
        55,
        35,
        92,
        190,
        113,
        177,
        124,
        1,
      ],
      "type": "Buffer",
    },
    Object {
      "data": Array [
        48,
        220,
        101,
        12,
        86,
        217,
        159,
        239,
        224,
        141,
        99,
        200,
        129,
        65,
        210,
        87,
        225,
        253,
        44,
        39,
        223,
        124,
        226,
        244,
        1,
        232,
        98,
        102,
        194,
        140,
        145,
        219,
        211,
        241,
        71,
        242,
        216,
        107,
        239,
        156,
        232,
        74,
        245,
        40,
        77,
        245,
        43,
        159,
        167,
        165,
        53,
        33,
        240,
        22,
        228,
        18,
        151,
        200,
        6,
        128,
        46,
        129,
        31,
        15,
      ],
      "type": "Buffer",
    },
  ],
}
`;

exports[`sign when running scenario "multisignature_registration_transaction" Second signature case should have correct signatures 1`] = `
Object {
  "command": "registerMultisignatureGroup",
  "fee": 1500000000n,
  "module": "auth",
  "nonce": 1n,
  "params": Object {
    "mandatoryKeys": Array [
      Object {
        "data": Array [
          11,
          33,
          31,
          206,
          75,
          97,
          80,
          131,
          112,
          28,
          184,
          168,
          201,
          148,
          7,
          228,
          100,
          178,
          249,
          170,
          79,
          54,
          112,
          149,
          50,
          45,
          225,
          183,
          126,
          95,
          207,
          190,
        ],
        "type": "Buffer",
      },
      Object {
        "data": Array [
          255,
          48,
          239,
          64,
          183,
          222,
          66,
          17,
          65,
          55,
          190,
          70,
          241,
          0,
          157,
          48,
          229,
          193,
          152,
          9,
          167,
          61,
          90,
          22,
          43,
          201,
          159,
          126,
          118,
          129,
          214,
          61,
        ],
        "type": "Buffer",
      },
    ],
    "numberOfSignatures": 2,
    "optionalKeys": Array [],
    "signatures": Array [
      Object {
        "data": Array [
          235,
          57,
          123,
          241,
          29,
          31,
          89,
          230,
          113,
          161,
          211,
          231,
          212,
          5,
          200,
          88,
          135,
          31,
          159,
          205,
          22,
          157,
          17,
          54,
          93,
          104,
          27,
          219,
          79,
          77,
          182,
          18,
          197,
          229,
          150,
          143,
          226,
          163,
          89,
          132,
          191,
          133,
          92,
          191,
          140,
          235,
          121,
          31,
          61,
          180,
          69,
          132,
          131,
          118,
          68,
          251,
          228,
          7,
          138,
          36,
          14,
          158,
          163,
          3,
        ],
        "type": "Buffer",
      },
      Object {
        "data": Array [
          232,
          203,
          255,
          16,
          7,
          18,
          60,
          136,
          144,
          84,
          212,
          224,
          73,
          194,
          79,
          51,
          222,
          251,
          224,
          102,
          151,
          39,
          89,
          168,
          166,
          133,
          168,
          128,
          93,
          248,
          179,
          186,
          239,
          18,
          97,
          244,
          43,
          36,
          198,
          143,
          110,
          208,
          91,
          64,
          245,
          191,
          196,
          191,
          221,
          40,
          155,
          115,
          207,
          237,
          70,
          61,
          164,
          234,
          23,
          168,
          166,
          100,
          43,
          15,
        ],
        "type": "Buffer",
      },
    ],
  },
  "senderPublicKey": Object {
    "data": Array [
      11,
      33,
      31,
      206,
      75,
      97,
      80,
      131,
      112,
      28,
      184,
      168,
      201,
      148,
      7,
      228,
      100,
      178,
      249,
      170,
      79,
      54,
      112,
      149,
      50,
      45,
      225,
      183,
      126,
      95,
      207,
      190,
    ],
    "type": "Buffer",
  },
  "signatures": Array [
    Object {
      "data": Array [
        87,
        119,
        199,
        58,
        135,
        202,
        87,
        211,
        96,
        211,
        128,
        188,
        20,
        35,
        35,
        27,
        134,
        106,
        32,
        67,
        51,
        168,
        35,
        57,
        53,
        120,
        35,
        209,
        67,
        190,
        150,
        91,
        45,
        38,
        22,
        42,
        7,
        187,
        70,
        118,
        197,
        113,
        101,
        220,
        92,
        106,
        126,
        254,
        132,
        125,
        127,
        152,
        203,
        20,
        50,
        47,
        18,
        221,
        11,
        71,
        6,
        129,
        253,
        8,
      ],
      "type": "Buffer",
    },
    Object {
      "data": Array [
        87,
        119,
        199,
        58,
        135,
        202,
        87,
        211,
        96,
        211,
        128,
        188,
        20,
        35,
        35,
        27,
        134,
        106,
        32,
        67,
        51,
        168,
        35,
        57,
        53,
        120,
        35,
        209,
        67,
        190,
        150,
        91,
        45,
        38,
        22,
        42,
        7,
        187,
        70,
        118,
        197,
        113,
        101,
        220,
        92,
        106,
        126,
        254,
        132,
        125,
        127,
        152,
        203,
        20,
        50,
        47,
        18,
        221,
        11,
        71,
        6,
        129,
        253,
        8,
      ],
      "type": "Buffer",
    },
    Object {
      "data": Array [
        233,
        146,
        6,
        183,
        103,
        236,
        174,
        59,
        123,
        31,
        252,
        143,
        103,
        78,
        215,
        231,
        175,
        237,
        87,
        85,
        139,
        46,
        22,
        157,
        180,
        94,
        172,
        131,
        51,
        60,
        236,
        66,
        106,
        212,
        207,
        55,
        83,
        27,
        80,
        172,
        29,
        247,
        232,
        77,
        68,
        17,
        86,
        142,
        63,
        88,
        244,
        223,
        139,
        55,
        205,
        150,
        109,
        52,
        225,
        229,
        156,
        242,
        150,
        8,
      ],
      "type": "Buffer",
    },
  ],
}
`;

exports[`sign when running scenario "multisignature_registration_transaction" Sender is a member of the group should have correct signatures 1`] = `
Object {
  "command": "registerMultisignatureGroup",
  "fee": 1500000000n,
  "module": "auth",
  "nonce": 1n,
  "params": Object {
    "mandatoryKeys": Array [
      Object {
        "data": Array [
          11,
          33,
          31,
          206,
          75,
          97,
          80,
          131,
          112,
          28,
          184,
          168,
          201,
          148,
          7,
          228,
          100,
          178,
          249,
          170,
          79,
          54,
          112,
          149,
          50,
          45,
          225,
          183,
          126,
          95,
          207,
          190,
        ],
        "type": "Buffer",
      },
      Object {
        "data": Array [
          74,
          103,
          100,
          106,
          68,
          99,
          19,
          219,
          150,
          76,
          57,
          55,
          3,
          89,
          132,
          92,
          82,
          252,
          233,
          34,
          90,
          57,
          41,
          119,
          14,
          244,
          20,
          72,
          194,
          88,
          253,
          57,
        ],
        "type": "Buffer",
      },
      Object {
        "data": Array [
          241,
          185,
          244,
          238,
          113,
          181,
          213,
          133,
          125,
          59,
          52,
          109,
          68,
          28,
          169,
          103,
          242,
          120,
          112,
          235,
          238,
          136,
          86,
          157,
          179,
          100,
          253,
          19,
          226,
          138,
          219,
          163,
        ],
        "type": "Buffer",
      },
    ],
    "numberOfSignatures": 4,
    "optionalKeys": Array [
      Object {
        "data": Array [
          87,
          223,
          92,
          56,
          17,
          150,
          25,
          57,
          248,
          220,
          250,
          133,
          140,
          110,
          174,
          254,
          191,
          170,
          77,
          233,
          66,
          247,
          231,
          3,
          191,
          136,
          18,
          126,
          14,
          233,
          204,
          164,
        ],
        "type": "Buffer",
      },
      Object {
        "data": Array [
          250,
          64,
          107,
          105,
          82,
          211,
          119,
          240,
          39,
          137,
          32,
          227,
          235,
          141,
          169,
          25,
          228,
          207,
          92,
          104,
          176,
          46,
          235,
          165,
          216,
          179,
          51,
          79,
          220,
          3,
          105,
          182,
        ],
        "type": "Buffer",
      },
    ],
  },
  "senderPublicKey": Object {
    "data": Array [
      11,
      33,
      31,
      206,
      75,
      97,
      80,
      131,
      112,
      28,
      184,
      168,
      201,
      148,
      7,
      228,
      100,
      178,
      249,
      170,
      79,
      54,
      112,
      149,
      50,
      45,
      225,
      183,
      126,
      95,
      207,
      190,
    ],
    "type": "Buffer",
  },
  "signatures": Array [
    Object {
      "data": Array [
        75,
        29,
        25,
        75,
        175,
        192,
        227,
        161,
        61,
        170,
        69,
        151,
        189,
        254,
        120,
        17,
        45,
        241,
        236,
        33,
        60,
        142,
        174,
        39,
        126,
        248,
        192,
        83,
        6,
        209,
        28,
        108,
        245,
        246,
        146,
        8,
        170,
        121,
        81,
        228,
        204,
        243,
        184,
        138,
        161,
        99,
        157,
        53,
        56,
        11,
        111,
        28,
        203,
        40,
        98,
        140,
        0,
        9,
        69,
        145,
        235,
        130,
        69,
        13,
      ],
      "type": "Buffer",
    },
    Object {
      "data": Array [
        75,
        29,
        25,
        75,
        175,
        192,
        227,
        161,
        61,
        170,
        69,
        151,
        189,
        254,
        120,
        17,
        45,
        241,
        236,
        33,
        60,
        142,
        174,
        39,
        126,
        248,
        192,
        83,
        6,
        209,
        28,
        108,
        245,
        246,
        146,
        8,
        170,
        121,
        81,
        228,
        204,
        243,
        184,
        138,
        161,
        99,
        157,
        53,
        56,
        11,
        111,
        28,
        203,
        40,
        98,
        140,
        0,
        9,
        69,
        145,
        235,
        130,
        69,
        13,
      ],
      "type": "Buffer",
    },
    Object {
      "data": Array [
        150,
        135,
        236,
        57,
        25,
        1,
        204,
        82,
        208,
        169,
        166,
        229,
        223,
        235,
        188,
        6,
        159,
        249,
        184,
        217,
        177,
        253,
        26,
        18,
        29,
        67,
        163,
        164,
        2,
        230,
        151,
        43,
        44,
        26,
        251,
        51,
        131,
        141,
        227,
        176,
        193,
        174,
        5,
        172,
        239,
        126,
        210,
        79,
        220,
        173,
        44,
        101,
        137,
        211,
        144,
        13,
        19,
        50,
        251,
        189,
        131,
        215,
        176,
        14,
      ],
      "type": "Buffer",
    },
    Object {
      "data": Array [
        120,
        65,
        47,
        237,
        244,
        54,
        216,
        5,
        68,
        99,
        238,
        85,
        237,
        184,
        223,
        78,
        110,
        118,
        73,
        67,
        87,
        21,
        67,
        184,
        131,
        61,
        56,
        22,
        0,
        246,
        178,
        235,
        35,
        125,
        69,
        32,
        2,
        134,
        78,
        193,
        68,
        115,
        61,
        237,
        23,
        167,
        33,
        3,
        76,
        154,
        10,
        78,
        107,
        66,
        104,
        62,
        115,
        167,
        173,
        173,
        81,
        47,
        157,
        6,
      ],
      "type": "Buffer",
    },
    Object {
      "data": Array [
        124,
        22,
        75,
        221,
        150,
        104,
        214,
        117,
        113,
        11,
        74,
        233,
        112,
        88,
        246,
        126,
        107,
        121,
        224,
        27,
        60,
        43,
        144,
        133,
        243,
        209,
        254,
        170,
        103,
        232,
        113,
        246,
        18,
        229,
        87,
        201,
        109,
        44,
        191,
        195,
        57,
        82,
        239,
        57,
        252,
        120,
        52,
        210,
        181,
        158,
        108,
        133,
        2,
        14,
        252,
        208,
        5,
        23,
        69,
        62,
        196,
        138,
        241,
        11,
      ],
      "type": "Buffer",
    },
    Object {
      "data": Array [
        97,
        134,
        208,
        227,
        15,
        150,
        3,
        15,
        218,
        46,
        145,
        118,
        118,
        49,
        154,
        221,
        90,
        149,
        253,
        94,
        145,
        122,
        37,
        173,
        32,
        89,
        242,
        161,
        135,
        53,
        62,
        107,
        146,
        47,
        163,
        55,
        120,
        105,
        17,
        248,
        97,
        125,
        215,
        136,
        154,
        2,
        8,
        161,
        176,
        62,
        234,
        95,
        186,
        103,
        165,
        125,
        8,
        240,
        179,
        110,
        218,
        17,
        230,
        8,
      ],
      "type": "Buffer",
    },
  ],
}
`;
